# onet-scraper-pro

./: .gitignore  README.md  debug_links.py  debug_runner.py  pyproject.toml  requirements.txt  scrapy.cfg
onet_scraper/: items.py  middlewares.py  pipelines.py  settings.py
onet_scraper/spiders/: onet.py
onet_scraper/utils/: extractors.py  text_cleaners.py
tests/: test_items.py  test_middlewares.py  test_pipelines.py  test_rules.py  test_utils_cleaners.py  test_utils_extractors.py
tests/test_spiders/: test_onet_spider.py
tor_data/: cached-microdesc-consensus  cached-microdescs.new  state
